[package]
name = "chaos"
version = "0.1.0"
edition = "2021"


[dependencies]
clap = { version = "4.5.20", features = ["derive", "env"] }
nix = { version = "0.29.0", default-features = false, features = ["process"] }
rand = "0.8.5"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
